# opencv_labs

./: CMakeLists.txt  blending.cpp  calibrate_camera_charuco.cpp  create_board_charuco.cpp  detect_markers.cpp  detector_params.yml  lab_2.cpp  lab_2.txt  main.cpp  tank.cpp
lab_1/: blending.cpp  main.cpp  tank.cpp
lab_2/: lab_2.cpp
lab_3/: task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp
lab_5/: main.cpp
