cmake_minimum_required(VERSION 3.0.0)
project(opencv_study VERSION 0.1.0)

include(CTest)
find_package(OpenCV REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS})
enable_testing()

add_executable(main main.cpp)
add_executable(tank tank.cpp)
add_executable(blending blending.cpp)
add_executable(lab_2 lab_2.cpp)
add_executable(task_1 lab_3/task_1.cpp)
add_executable(task_2 lab_3/task_2.cpp)
add_executable(task_3 lab_3/task_3.cpp)
add_executable(task_4 lab_3/task_4.cpp)


set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
target_link_libraries(main ${OpenCV_LIBS})
target_link_libraries(tank ${OpenCV_LIBS})
target_link_libraries(blending ${OpenCV_LIBS})
target_link_libraries(lab_2 ${OpenCV_LIBS})
target_link_libraries(task_1 ${OpenCV_LIBS})
target_link_libraries(task_2 ${OpenCV_LIBS})
target_link_libraries(task_3 ${OpenCV_LIBS})
target_link_libraries(task_4 ${OpenCV_LIBS})
